Kube-Project-Aug-2k25/9-Security-NetworkPolicy/Security-NetworkPolicy.yml
apiVersion: v1
kind: Namespace
metadata:
  name: np-demo
  labels:
    pod-security.kubernetes.io/enforce: restricted
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: np-demo
spec:
  replicas: 2
  selector: { matchLabels: { app: backend } }
  template:
    metadata: { labels: { app: backend } }
    spec:
      containers:
      - name: app
        image: ghcr.io/k8s-demos-mini/echo:1.0
        ports: [{ containerPort: 8080 }]
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: np-demo
spec:
  selector: { app: backend }
  ports: [{ port: 80, targetPort: 8080 }]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: np-demo
spec:
  replicas: 1
  selector: { matchLabels: { app: frontend } }
  template:
    metadata: { labels: { app: frontend } }
    spec:
      containers:
      - name: busy
        image: curlimages/curl:8.10.1
        command: ["sleep","3600"]
---
# 1) Default deny to backend
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-default-deny
  namespace: np-demo
spec:
  podSelector: { matchLabels: { app: backend } }
  policyTypes: [Ingress]
  ingress: []
---
# 2) Allow only frontend -> backend on port 80
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-allow-from-frontend
  namespace: np-demo
spec:
  podSelector: { matchLabels: { app: backend } }
  policyTypes: [Ingress]
  ingress:
  - from:
    - podSelector: { matchLabels: { app: frontend } }
    ports:
    - protocol: TCP
      port: 80
